changed the shape of the button for insertion sort

--- a/Insertion_Sort.html
+++ b/Insertion_Sort.html
@@ -26,6 +26,7 @@
             border: none; /* Remove border */
             border-radius: 8px; /* Rounded corners */
             box-shadow: 0 12px 4px rgba(0, 0, 0, 0.2);
+            border-radius: 50%;
         }
 
         #sort:hover {
