added bubble sort

--- a/display.html
+++ b/display.html
@@ -14,6 +14,7 @@
         <div class="dropdown-item" onclick="loadPage('Finalproject.html')">Merge Sort</div>
         <div class="dropdown-item" onclick="loadPage('Insertion_Sort.html')">Insertion Sort</div>
         <div class="dropdown-item" onclick="loadPage('quicksort.html')">Quick Sort</div>
+        <div class="dropdown-item" onclick="loadPage('bubblesort.html')">Bubble Sort</div>
     </div>
 </div>
 
