--- a/display.html
+++ b/display.html
@@ -11,7 +11,7 @@
     <div class="dropdown-btn" id="dropdownBtn">Select a Sorting Algorithm</div>
     <div class="dropdown-content" id="dropdownContent">
         <!-- Update these lines with onclick attribute -->
-        <div class="dropdown-item" onclick="loadPage('FInalproject.html')">Merge Sort</div>
+        <div class="dropdown-item" onclick="loadPage('mergesort.html')">Merge Sort</div>
         <div class="dropdown-item" onclick="loadPage('Insertion_Sort.html')">Insertion Sort</div>
         <div class="dropdown-item" onclick="loadPage('quicksort.html')">Quick Sort</div>
         <div class="dropdown-item" onclick="loadPage('bubblesort.html')">Bubble Sort</div>
