--- a/display.html
+++ b/display.html
@@ -12,13 +12,13 @@
     <div class="dropdown-content" id="dropdownContent">
         <!-- Update these lines with onclick attribute -->
         <div class="dropdown-item" onclick="loadPage('selectionsort.html')">Selection Sort</div>
-        <div class="dropdown-item" onclick="loadPage('Insertion_Sort.html')">Insertion Sort</div>
+        <div class="dropdown-item" onclick="loadPage('insertionsort.html')">Insertion Sort</div>
         <div class="dropdown-item" onclick="loadPage('quicksort.html')">Quick Sort</div>
         <div class="dropdown-item" onclick="loadPage('bubblesort.html')">Bubble Sort</div>
     </div>
 </div>
 
-<iframe id="pageFrame" frameborder="0" style="width:100%; height:100vh;"></iframe>
+<iframe id="pageFrame" frameborder="0" style="width:100%; height: 800px;;"></iframe>
 
 <script>
     // Add the loadPage function here
